Implement zero-logger
